--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,20 @@
       }
     }
     i{
-
-      padding: 20px;
-      background-color: white;
+    font-size: 1.5rem;
+    }
+    .mainBody{
+    position: relative;
+    }
+    .linkedItem-left{
+    position: absolute;
+    left:80px;
+    top:50%;
+    z-index: 22;
+    }
+    .linkedItem-right{
+    position: absolute;
+    right:110px; 
+    top: 50%;
+    z-index: 22;
     }
